# da-salesperson

./: .clangd  .gitattributes  .gitignore  CMakeLists.txt  DA2324_PRJ2_G163  LICENSE  README.md  main.cpp  run.sh
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml
.run/: Large_ Graph 1.run.xml  Large_ Graph 3.run.xml  Large_ Graph toy.run.xml  Medium_ 25 Edges.run.xml  Medium_ 900 Edges.run.xml  Small_ Shipping.run.xml  Small_ Stadiums.run.xml  Small_ Tourism.run.xml
dataset/Extra_Fully_Connected_Graphs/: edges_100.csv  edges_200.csv  edges_25.csv  edges_300.csv  edges_400.csv  edges_50.csv  edges_500.csv  edges_600.csv  edges_700.csv  edges_75.csv  edges_800.csv  edges_900.csv  nodes.csv
dataset/Real-world Graphs/graph1/: edges.csv  nodes.csv
dataset/Real-world Graphs/graph2/: edges.csv  nodes.csv
dataset/Real-world Graphs/graph3/: edges.csv
dataset/Toy-Graphs/: shipping.csv  stadiums.csv  tourism.csv
docs/: Apresentação.pptx  Doxyfile  docs.md
lib/: Graph.h  MutablePriorityQueue.h  UFDS.cpp  UFDS.h
src/: CSV.cpp  CSV.h  CSV.hpp  Parser.cpp  Parser.h  Parsum.hpp  Runtime.cpp  Runtime.h  Utils.cpp  Utils.h
src/data/: Data.cpp  Data.h  Graph.hpp  Info.cpp  Info.h
